--- a/style.css
+++ b/style.css
@@ -22,6 +22,17 @@ p {
     font-size: 16px;
     color:  var(--color-dark);
 }
+section {
+    width: 100%;
+
+    display: flex;
+    justify-content: space-between;
+
+    box-sizing: border-box;
+}
+.margin-30 {
+    margin: 30px 30px 0 0;
+}
 .loading-overlay {
   display: none;
   position: absolute;
@@ -30,6 +41,14 @@ p {
   width: 100vw;
   
   background-color: rgba(0, 0, 0, 0);
+}
+.divider {
+    height: 1px;
+    width: 300px;
+
+    margin-bottom: 30px;
+
+    background-color: var(--color-light);
 }
 
 /* MENU */
@@ -82,6 +101,10 @@ nav > img {
 .active {
     color: #49433E;
 }
+.text__details {
+    font-size: 12px;
+    text-align: right;
+}
 
 /* PAGE TIMELINE */
 #page__timeline {
@@ -91,7 +114,6 @@ nav > img {
 
     margin: 0 0 0 var(--menu-width);
     padding: 20px 0 0 20px;
-
 
     display: flex;
     flex-wrap: wrap;
@@ -110,6 +132,7 @@ form {
 
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: space-between;
     
     background: rgba(255, 255, 255, 0.8);
@@ -117,13 +140,17 @@ form {
     box-shadow: 0 8px 16px rgba(73, 67, 62, 0.16);
     z-index: 1;
 }
+form div {
+    width: 100%;
+}
 form div:nth-of-type(2) {
     display: flex;
 }
 
 .tasks__box {
-    min-height: 70%;
-    overflow: scroll;
+    min-height: 65%;
+    z-index: 5;
+    /*overflow: scroll;*/
 }
 .toDo__box {
     min-height: 30px;
@@ -133,6 +160,8 @@ form div:nth-of-type(2) {
 
     display: flex;
     align-items: center; 
+
+    cursor: pointer;
 }
 .toDo__box p {
     margin: 0;
@@ -178,4 +207,17 @@ input[type="submit"] {
     border: none;
 
     border-radius: 0 0 5px 0;
+}
+
+
+/* DRAG AND DROP */
+.hold {
+  border:3px solid hotpink;
+  border-radius: 5px;
+}
+.hovered {
+  border: 2px dashed hotpink;
+}
+.invisible {
+  display: none;
 }
